# dorian

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE  LLVM_COMPARISON.md  README.md  build.rs  data.json  llvm_comparison.md
dorian-ast/: Cargo.toml
dorian-ast/src/: backend.rs  function.rs  global.rs  lib.rs  module.rs  structure.rs
dorian-ast/src/block/: builder.rs  mod.rs  stmt.rs
dorian-ast/src/stmt/: mod.rs
dorian-ast/src/ty/: convert.rs  mod.rs  util.rs
dorian-ast/src/val/: convert.rs  mod.rs  util.rs
dorian-cranelift/: Cargo.toml
dorian-cranelift/src/: cl.rs  lib.rs  scope.rs  ty.rs
dorian-llvm/: Cargo.toml
dorian-llvm/src/: lib.rs  llvm.rs  scope.rs  ty.rs  val.rs
examples/: fib.rs  iterative_fib.rs  recursive_fib.rs
examples/addition/: main.rs
examples/fib/: main.rs
src/: dorian.rs  fun.rs  function.rs  lib.rs  module.rs  tests.rs
src/fun/: block.rs  mod.rs
src/function/: block.rs
src/llvm/: basic_block.rs  debug.rs  disassembler.rs  fun.rs  function.rs  lto.rs  memory_buffer.rs  mod.rs  object.rs  opcode.rs  orc2.rs  remarks.rs
src/llvm/builder/: mod.rs
src/llvm/context/: mod.rs
src/llvm/execution_engine/: fun.rs  mod.rs
src/llvm/module/: mod.rs
src/llvm/types/: mod.rs
src/llvm/value/: mod.rs
src/types/: array.rs  data.rs  float.rs  fun.rs  function.rs  int.rs  kind.rs  mod.rs  ptr.rs  structure.rs  vector.rs  void.rs
src/value/: any.rs  cmp.rs  constant.rs  data.rs  float.rs  fun.rs  int.rs  mod.rs  ptr.rs  vector.rs
