[package]
name = "dorian"
version = "0.1.1"
edition = "2018"
description = "The intuitive LLVM abstraction written in Rust."
license-file = "LICENSE"
homepage = "https://github.com/peterhenryd/dorian"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "120.1.0"