[package]
name = "dorian"
version = "0.2.2"
edition = "2018"
description = "The intuitive LLVM abstraction written in Rust."
license-file = "LICENSE"
homepage = "https://github.com/peterhenryd/dorian"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }